Fixed About Page formatting and alignment

--- a/portfolio/static/css/style.css
+++ b/portfolio/static/css/style.css
@@ -791,29 +791,38 @@ main {
     height: auto;
 }
 
-.row-top {
-    margin-top: 50px;
+.block1 {
+    padding-left: 55px;
+    padding-right: 55px;
+    padding-top: 50px;
+}
+
+.block2 {
+    padding-left: 55px;
+    padding-right: 55px;
+    padding-top: 40px;
 }
 
 .img-right {
-    width:545px;
-    height:400px;
     margin-left:30px;
-    margin-top:5px;
-}
-
-.row-bottom {
-    margin-top: 25px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1);
 }
 
 .img-left {
-    width:545px;
-    height:400px;
     margin-right:30px;
-    margin-top:5px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1);
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 0px) and (max-width: 500px) {
+
+    .block1 {
+        padding: 20px;
+    }
+
+    .block2 {
+        padding: 20px;
+    }
+
 	.img-right {
         width: 100%;
         height: 350px;
@@ -825,10 +834,10 @@ main {
     }
 
     .div-left {
-        margin-top:370px;
+        padding-top:380px;
     }
 
     .div-right {
-        margin-top:370px;
+        padding-top:380px;
     }
 }
